fix(e2e): adjust a11y color contrast

--- a/installer/templates/corex_design/corex/components/select.css
+++ b/installer/templates/corex_design/corex/components/select.css
@@ -178,7 +178,7 @@
     padding-inline: --value(--spacing-space-*, [length]);
     gap: --value(--spacing-space-*, [length]);
     min-height: --value(--spacing-size-*, [length]);
-    color: --value(--color-*-ink, [color]);
+    color: --value(--color-ink-*, [color]);
   }
 
   [data-scope="select"][data-part="trigger"] .icon,
@@ -209,25 +209,25 @@
   [data-scope="select"][data-part="item"][data-selected],
   [data-scope="select"][data-part="item"][data-state="checked"] {
     background-color: var(--color-ui);
-    color: --value(--color-*-ink, [color]);
+    color: --value(--color-ink-*, [color]);
   }
 
   [data-scope="select"][data-part="item"][data-selected]:hover,
   [data-scope="select"][data-part="item"][data-state="checked"]:hover {
     background-color: var(--color-ui-hover);
-    color: --value(--color-*-ink, [color]);
+    color: --value(--color-ink-*, [color]);
   }
 
   [data-scope="select"][data-part="item"][data-selected]:active,
   [data-scope="select"][data-part="item"][data-state="checked"]:active {
     background-color: var(--color-ui-active);
-    color: --value(--color-*-ink, [color]);
+    color: --value(--color-ink-*, [color]);
   }
 
   [data-scope="select"][data-part="item"][data-selected]:focus-visible,
   [data-scope="select"][data-part="item"][data-state="checked"]:focus-visible {
     outline: none;
-    box-shadow: inset 0 0 0 2px --value(--color-*-ink, [color]);
+    box-shadow: inset 0 0 0 2px --value(--color-ink-*, [color]);
   }
 
   @media (hover: hover) {
@@ -251,9 +251,9 @@
   [data-scope="select"][data-part="item"][data-selected][data-highlighted],
   [data-scope="select"][data-part="item"][data-state="checked"][data-highlighted] {
     outline: none;
-    box-shadow: inset 0 0 0 2px --value(--color-*-ink, [color]);
+    box-shadow: inset 0 0 0 2px --value(--color-ink-*, [color]);
     background-color: var(--color-ui-hover);
-    color: --value(--color-*-ink, [color]);
+    color: --value(--color-ink-*, [color]);
   }
 }
 
